<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="10dp">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="10dp">

                <Button
                        android:id="@+id/btn_entries"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/left_radius"
                        android:text="@string/entries"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp" />

                <Button
                        android:id="@+id/btn_calendar"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/skyblue_rect"
                        android:text="@string/calendar"
                        android:textSize="12sp" />

                <Button
                        android:id="@+id/btn_diary"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/right_radius"
                        android:text="@string/diary"
                        android:textSize="12sp" />


            </LinearLayout>

            <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/default_user"
                    android:textColor="@color/colorSkyBlue"
                    android:textSize="20sp" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorDeepBlue" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <FrameLayout
            android:id="@+id/main_frame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bnv_diary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_main" />

    <android.support.design.widget.BottomNavigationView
            android:id="@+id/bnv_diary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSkyBlue"
            app:menu="@menu/menu_navigation"
            app:labelVisibilityMode="unlabeled"
            app:itemIconTint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>