<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/layout_black_border"
        android:padding="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:fontFamily="@font/binggrae_melona_bold"
            android:text="@string/add_new_todo"
            android:textSize="20sp" />

    <View
            android:layout_height="1dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/colorBlack"
            android:layout_width="match_parent" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:text="제목"
                    android:textSize="18sp"
                    android:fontFamily="@font/binggrae"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/et_dialog_todo_title"
                    android:ems="12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:text="내용"
                    android:textSize="18sp"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/binggrae"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/et_dialog_todo_content"
                    android:ems="12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <Button
                android:id="@+id/btn_todo_dialog_cancel"
                android:text="@string/cancel"
                android:background="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btn_todo_dialog_ok"
                android:text="@string/confirm"
                android:background="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>